--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,7 @@ RewriteCond %{HTTP_HOST} www.static.nameremoved.com$
 RewriteRule ^(.*)$ http://static.nameremoved.com/$1 [R]
 Options -Indexes
 ErrorDocument 404 /notfound.html
+<FilesMatch "\.(jpeg|jpg|png|gif|js|css)$">
+ExpiresActive On
+ExpiresDefault "access plus 1 week"
+</FilesMatch>
